[package]
name = "kon"
version = "0.3.20"
edition = "2021"

[dependencies]
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
bb8-redis = "0.17.0"
cargo_toml = "0.20.4"
feed-rs = "2.1.0"
once_cell = "1.19.0"
poise = "0.6.1"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json", "native-tls-vendored"] }
serde = "1.0.210"
serde_json = "1.0.128"
sysinfo = "0.31.4"
tokenservice-client = { version = "0.4.0", registry = "gitea" }
tokio = { version = "1.40.0", features = ["macros", "signal", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
uptime_lib = "0.3.1"

[features]
production = []

[[bin]]
name = "kon"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
debug = false
strip = true
