[package]
name = "kon"
version = "0.5.0"
edition = "2021"

[dependencies]
bb8 = "0.8.6"
bb8-redis = "0.17.0"
cargo_toml = "0.20.5"
feed-rs = "2.2.0"
once_cell = "1.20.2"
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json", "native-tls-vendored"] }
serde = "1.0.215"
serde_json = "1.0.133"
sysinfo = "0.32.0"
tokenservice-client = { version = "0.4.0", registry = "gitea" }
tokio = { version = "1.41.1", features = ["macros", "signal", "rt-multi-thread"] }
uptime_lib = "0.3.1"

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }

[features]
production = []

[[bin]]
name = "kon"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
debug = false
strip = true
