[package]
name = "kon"
version = "0.6.3"
edition = "2024"

[workspace]
members = ["cmds", "libs", "repo", "tasks", "tokens"]

[workspace.dependencies]
bb8 = "0.9.0"
bb8-redis = "0.18.0"
cargo_toml = "0.21.0"
feed-rs = "2.3.1"
once_cell = "1.20.2"
poise = "0.6.1"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json", "native-tls-vendored"] }
serde = "1.0.217"
serde_json = "1.0.134"
sysinfo = "0.33.1"
lazy_static = "1.5.0"
tokio = { version = "1.42.0", features = ["macros", "signal", "rt-multi-thread"] }
uptime_lib = "0.3.1"
kon_libs = { path = "libs" }
kon_tokens = { path = "tokens" }
kon_repo = { path = "repo" }

[dependencies]
kon_cmds = { path = "cmds" }
kon_libs = { workspace = true }
kon_tasks = { path = "tasks" }
kon_tokens = { workspace = true }
poise = { workspace = true }
tokio = { workspace = true }

[patch.crates-io]
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }

[features]
production = ["kon_libs/production", "kon_tasks/production"]
rss = ["kon_tasks/rss"]

[[bin]]
name = "kon"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 2
debug = false
strip = true
